<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cr_acc_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vader.proj2part3.MainActivity">

    <TextView
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/the_username_and_password_must_have_at_least_one_special_symbol_or_one_number_and_three_alphabetic_letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:text="@string/enter_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/userName"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:text="@string/enter_new_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/textView4"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/pw2"
        android:hint="@string/password"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="11dp" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:ems="10"
    android:id="@+id/userName"
    android:hint="@string/user_name"
    android:layout_below="@+id/textView4"
    android:layout_alignStart="@+id/textView5"
    android:layout_marginTop="12dp" />

<Button
    android:text="@string/verify"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/verifyBtn"
    android:layout_alignTop="@+id/textView4"
    android:layout_alignParentEnd="true" />

    <TextView
        android:text="Attempts: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textColor="@android:color/black"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignStart="@+id/verifyBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numAttView"
        android:text="2"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:textColor="@android:color/black" />

</RelativeLayout>